# llm-bench

./: .gitignore  BENCH_PLAN.md  README.md  catalog.yaml  models.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: analysis.py  money.py
app/data/: transactions.csv
cases/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml  _build.py
docs/superpowers/plans/: 2026-06-12-hardware-aware-model-recommendation.md
harness/: ollama_client.py  recommend.py  report.py  run.py  scorer.py
harness_tests/: test_ollama_client.py  test_recommend.py  test_report.py  test_run.py  test_scorer.py
tests/: test_analysis.py  test_money_allocate.py  test_money_arithmetic.py  test_money_conversion.py  test_money_currencies.py  test_money_formatting.py  test_money_misc.py  test_money_parsing.py  test_money_rounding.py
