[project]
name = "llm-bench"
version = "0.1.0"
description = "Local LLM coding benchmark for Ollama models on javelin"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "harness"]

[tool.pytest.ini_options]
testpaths = ["tests", "harness_tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
